app/assets/app.css
/* Custom Styling */

/* Page Card Header Styling */

md-whiteframe {
  margin: 18px !important;
  background: #fff !important;
  text-align: center !important;
}

/* Background Styling */

.main-background {
  background: url('./images/main/bg-pattern.png');
  background-size: 20%
}

/* Toolbar Styling */

md-toolbar.abstract-background {
  background: #7f7f7f;
  /* background: url('./images/main/abstract-pattern.png'); */
  /* #2ba3d4 = Complementary Blue */
  /* #29c2f4 = Light Blue from BG Pattern */
  color: white;
}

md-toolbar md-tabs-canvas {
  background: #7f7f7f;
  /* background: url('./images/main/abstract-pattern.png'); */
}

md-toolbar md-tabs-canvas a {
   font-weight: bold;
}

.md-toolbar-tools-spacer {
  display: flex;
  height: 24px;
}

.md-toolbar-header h1 {
  font-size: 2.5em;
  font-family: 'Montez', 'Roboto', sans-serif;
}

md-toolbar md-tab-item>span{
  color: white;
  font-weight: bold;
}

md-toolbar md-tab-item:nth-last-child(3),md-tab-item:nth-last-child(2) {
  display: none !important;
}

/* Ribbon Countdown Styling */

@media screen and (max-width:958px) {     
.ribbon-container { 
      display:none !important;     }  
}

.ribbon-container > .ribbon.ribbon_yellow {
      z-index: 2;
      border-top: 2px solid yellow;
      border-bottom: 2px solid yellow;
      color: yellow; }
      .ribbon-container > .ribbon.ribbon_yellow::after {
        border-color: yellow; }
      .ribbon-container > .ribbon.ribbon_yellow::before {
        border-color: yellow; }
      .ribbon-container > .ribbon.ribbon_yellow > a {
        color: yellow; }

.ribbon-container > .ribbon.ribbon_hidden {
      display: none; }

/* End Custom Styling */

html, body {
  font-family: 'Prata', 'Roboto', sans-serif;
  font-size: large;
  height:100%;
  margin: 0px;
  padding: 0px;
}

/* Toolbar area */

.menu {
  background-color: transparent;
  border: none;
  height: 38px;
  margin: 16px;
  width: 36px;
}

md-toolbar h1 {
  margin: auto;
}

/* Sidenav area */

md-list .md-button {
  color: inherit;
  font-weight: 500;
  text-align: left;
  width: 100%;
}
  md-list .md-button.selected {
    color: #03a9f4;
  }

  md-sidenav  md-list {
    padding: 0px 0px 8px 0px;
  }


/* Primary content area */

#content {
  overflow: hidden;
}

#content  {
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 5px;
}

#content .md-button.contact {
  background-color: transparent;
  border: none;
  width: 48px;
  height: 48px;
  margin: 8px auto 16px 0;
  position: absolute;
  top: 10px;
  right: 40px;
}

#content md-icon.avatar {
  margin-top: 10px;
}

#content .md-button.contact > md-icon {
  fill:black;
  width:36px;
  height:36px;
}

md-button.menuBtn > md-icon {
  fill:white;
  width:24px;
  height:24px;
}

#content .md-button.contact:active > md-icon {
  background-color: #dadada;
  border-radius: 75%;
  padding:4px;
  transition: all 100ms ease-out 30ms;
}

#content img {
  display: block;
  height: auto;
  max-width: 500px;
}

/* Utils */

.content-wrapper {
  position: relative;
}

/* Typography support coming in 0.8.0 */

md-toolbar h1 {
  font-size: 1.250em;
  font-weight: 400;
}

.avatar {
  position: relative;
  width: 128px;
  height: 128px;
  border: 1px solid #ddd;
  border-radius: 50%;
  display: inline-block;
  overflow: hidden;
  margin: 0px;
  vertical-align: middle;
  zoom:0.70;
  transform: translateZ(0);
  -webkit-transform: scale(0.70);
  -moz-transform:scale(0.70);
}


md-bottom-sheet  md-icon {
  margin-right:20px;
}

span.name {
  font-weight: bold;
  font-size:1.1em;
  padding-left:5px;
}

